2007-12-14  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/style.css: Make the header pink with black text, to be slightly 
	more like the default gtk-doc style.
	* docs/tutorial/clutter-tut.xml: Full Example: Added a description of what it does.
	* docs/tutorial/figures/Makefile.am:
	* docs/tutorial/figures/: Added full_example.png.
	* examples/full_example/main.c: Make the background gray. Add a white rectangle under 
	the ellipse to give more sense of 3D. This is still rather ugly.

2007-12-13  Murray Cumming  <murrayc@murrayc.com>

	* examples/full_example/main.c: Gradualyl show a label with the filename 
	when showing the item. I could make this more attractive when we have 
	container actors again. 

2007-12-13  Murray Cumming  <murrayc@murrayc.com>

	* examples/behaviour/main.c: (main):
	* examples/effects/main.c: (main):
	* examples/timeline/main.c: (main): unref the timeline when the mainloop 
	stops.
	* examples/full_example/main.c: Avoid using even 360 degrees (not just >360) 
	to avoid an extra rotation of some items. Move and scale the clicked item 
	when the rotation stops.

2007-12-13  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Contributing: 
	Correct the email address.
	Timelines: Mention behaviours and actors, while 
	still avoiding trying to explain them all in one 
	paragraph, because each chapter explains the advantage 
	compared to the previous one. I don't want to confuse 
	people with too many concepts too quickly.
	Actor Events: Mention 
	clutter_set_motion_events_enabled() and 
	clutter_actor_set_reactive().
	Thanks to Tommi Komulainen for the suggestions.

2007-12-12  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Behaviours: 
	List the standard behaviours.

2007-12-12  Murray Cumming  <murrayc@murrayc.com>

	* configure.ac:
	* examples/Makefile.am:
	* examples/actor_transformations/main.c: (main):
	Added this example.
	* examples/actor/main.c: (main): Removed the 